--- a/index.html
+++ b/index.html
@@ -82,25 +82,19 @@
                 <div>
                     <i class="fas fa-code"></i>
                     <h2>Web Design</h2>
-                    <p>Multimedia Diploma at at Earth University College.
-                        And I always work to word my goals very efficiently.
-                        I am a team player and a very optimistic person.</p>
+                    <p>Web application development is the creation of application programs that reside on remote servers and are delivered to the user's device over the Internet.</p>
                     <a href="#">Learn more</a>
                 </div>
                 <div>
                     <i class="fas fa-crop-alt"></i>
                     <h2>UI/UX Design</h2>
-                    <p>Multimedia Diploma at at Earth University College.
-                        And I always work to word my goals very efficiently.
-                        I am a team player and a very optimistic person.</p>
+                    <p>User experience encompasses all aspects of the end-user’s interaction with the company, its services, and its products.</p>
                     <a href="#">Learn more</a>
                 </div>
                 <div>
                     <i class="fab fa-app-store"></i>
                     <h2>App Design</h2>
-                    <p>Multimedia Diploma at at Earth University College.
-                        And I always work to word my goals very efficiently.
-                        I am a team player and a very optimistic person.</p>
+                    <p>The difference between good app design and a poor one is usually the quality of its user experience.</p>
                     <a href="#">Learn more</a>
                 </div>
             </div>
@@ -112,30 +106,28 @@
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
+                    <img src="images/work-3.png">
+                    <div class="layer">
+                        <h3>Class Video recording App</h3>
+                        <p>Website for Earth university college to view class recordings.</p>
+                        <a href="http://www.earth.lk/project/2021/classes/"><i class="fas fa-external-link-alt"></i></a>
+                    </div>
+                </div>
+                <div class="work">
                     <img src="images/work-1.png">
                     <div class="layer">
                         <h3>Distributed Supermarket System</h3>
-                        <p>And I always work to word my goals very efficiently.
-                            I am a team player and a very optimistic person.</p>
-                        <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                        <p>My final year project, which utilized Angular, Spring Boot, and MySQL, is already complete.
+                            This distributed supermarket management system is full-featured. You can view that in my GitHub account.</p>
+                        <a href="https://github.com/Hasshan-cmd/Supermarket-project-pro-"><i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
                 <div class="work">
                     <img src="images/work-2.png">
                     <div class="layer">
-                        <h3>Social Media App</h3>
-                        <p>And I always work to word my goals very efficiently.
-                            I am a team player and a very optimistic person.</p>
-                        <a href="#"><i class="fas fa-external-link-alt"></i></a>
-                    </div>
-                </div>
-                <div class="work">
-                    <img src="images/work-3.png">
-                    <div class="layer">
-                        <h3>Class Video recording App</h3>
-                        <p>And I always work to word my goals very efficiently.
-                            I am a team player and a very optimistic person.</p>
-                        <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                        <h3>Some simple applications</h3>
+                        <p>Expert in creating innovative and tailored solutions to assist businesses in achieving their goals across a wide range of industries.</p>
+                        <a href="https://github.com/Hasshan-cmd?tab=repositories"><i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
             </div>
