new project add

--- a/index.html
+++ b/index.html
@@ -106,14 +106,6 @@
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="images/work-3.png">
-                    <div class="layer">
-                        <h3>Class Video recording App</h3>
-                        <p>Website for Earth university college to view class recordings.</p>
-                        <a href="http://www.earth.lk/project/2021/classes/"><i class="fas fa-external-link-alt"></i></a>
-                    </div>
-                </div>
-                <div class="work">
                     <img src="images/work-1.png">
                     <div class="layer">
                         <h3>Distributed Supermarket System</h3>
@@ -125,9 +117,19 @@
                 <div class="work">
                     <img src="images/work-2.png">
                     <div class="layer">
-                        <h3>Some simple applications</h3>
-                        <p>Expert in creating innovative and tailored solutions to assist businesses in achieving their goals across a wide range of industries.</p>
-                        <a href="https://github.com/Hasshan-cmd?tab=repositories"><i class="fas fa-external-link-alt"></i></a>
+                        <h3>Ecommerce website for VL Fashion</h3>
+                        <p>This ecommerce website will feature a user friendly and secure shopping cart system,
+                            allowing customers to easily add and remove items from their cart.
+                            We will also offer discounts and promotions to incentivize customers to purchase our products.</p>
+                        <a href="https://sites.google.com/view/vlfashion"><i class="fas fa-external-link-alt"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="images/work-3.png">
+                    <div class="layer">
+                        <h3>Class Video recording App</h3>
+                        <p>Website for Earth university college to view class recordings.</p>
+                        <a href="http://www.earth.lk/project/2021/classes/"><i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
             </div>
