Ecommerce website same changes

--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
                         <h3>Ecommerce website for VL Fashion</h3>
                         <p>This ecommerce website will feature a user friendly and secure shopping cart system,
                             allowing customers to easily add and remove items from their cart.
-                            We will also offer discounts and promotions to incentivize customers to purchase our products.</p>
+                            The website should also feature a shopping cart and checkout system.
+                            The website should also have a customer account system for customers to sign up and manage their orders. </p>
                         <a href="https://sites.google.com/view/vlfashion"><i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
