--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
           <!-- hide -->
           <div class="work hide">
-            <img src="images/work-1.png" />
+            <img src="images/work-4.png" />
             <div class="layer">
               <h3>Distributed Supermarket System</h3>
               <p>
@@ -228,14 +228,14 @@
           </div>
 
           <div class="work hide">
-            <img src="images/work-1.png" />
+            <img src="images/work-5.png" />
             <div class="layer">
               <h3>Distributed Supermarket System</h3>
               <p>
-                My final year project, which utilized Angular, Spring Boot, and
-                MySQL, is already complete. This distributed supermarket
-                management system is full-featured. You can view that in my
-                GitHub account.
+                This ecommerce website will feature a user-friendly and secure
+                shopping cart system, allowing customers to easily add and
+                remove items from their cart. The website should also feature a
+                shopping cart and checkout system.
               </p>
               <a href="https://github.com/Hasshan-cmd/Supermarket-project-pro-"
                 ><i class="fas fa-external-link-alt"></i
@@ -244,7 +244,7 @@
           </div>
 
           <div class="work hide">
-            <img src="images/work-1.png" />
+            <img src="images/work-6.png" />
             <div class="layer">
               <h3>Distributed Supermarket System</h3>
               <p>
